fix: no hya overflow pero en x

--- a/front/css/style.css
+++ b/front/css/style.css
@@ -2,7 +2,7 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-    overflow: hidden; /* evita scrolls de todo el body */
+    overflow-x: hidden; /* evita scrolls de todo el body */
 }
 
 .fondo {
